third_party/move/move-compiler-v2/tests/more-v1/expansion/unpack_assign_block_single_expr.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/expansion/unpack_assign_block_single_expr.move:4:13
  │
4 │         S { 0 } = S { f: 0 };
  │             ^
  │             │
  │             Unexpected '0'
  │             Expected an identifier
